# unitree_rl_lab

./: UNITREE_RL_LAB_GUIDE.md  check_kinematics.py  check_kinematics_scan.py  find_best_pose.py  find_best_pose_detailed.py  test_wheel.sh  unitree_rl_lab.sh
deploy/robots/go2/: CMakeLists.txt
scripts/rsl_rl/: play.py  train.py
source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/wheel_dog/: __init__.py  velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/agents/: rsl_rl_ppo_cfg.py
